Updated by task 'AUTO_TM_MT_1762295059887' Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/audience-manager.en/commit/04add86d5fa7c47c44666b1575cfc261d29969d7

--- a/help/using/docs-updates/docs-2019.md
+++ b/help/using/docs-updates/docs-2019.md
@@ -7,10 +7,10 @@ title: Mises à jour de la documentation 2019
 uuid: 75592371-8e97-440a-9cdc-417498d13d6c
 feature: Overview
 exl-id: 3cc664e4-67e8-48b8-980a-db3f3fe327f6
-source-git-commit: 670d2f1990d7370ab8930776df9ae5af71dd3d9e
+source-git-commit: fc26861e4a53abc57f8814abf823a51894fb6147
 workflow-type: tm+mt
 source-wordcount: '1347'
-ht-degree: 35%
+ht-degree: 32%
 
 ---
 
@@ -18,7 +18,7 @@ ht-degree: 35%
 
 Une liste de la documentation nouvelle ou révisée publiée en 2019. Inclut des mises à jour mineures de la documentation d’Audience Manager qui pourraient ne pas figurer dans les notes de mise à jour d’Experience Cloud.
 
-Consultez les [Notes de mise à jour d’Experience Cloud](https://experienceleague.adobe.com/docs/release-notes/experience-cloud/current.html?lang=fr) pour prendre connaissance des modifications apportées à [!DNL Audience Manager] et aux autres solutions d’[!DNL Experience Cloud]. Pour consulter les anciennes notes de mise à jour, reportez-vous à la section [Années précédentes](../docs-updates/docs-2018.md).
+Consultez les [Notes de mise à jour d’Experience Cloud](https://experienceleague.adobe.com/docs/release-notes/experience-cloud/current.html) pour prendre connaissance des modifications apportées à [!DNL Audience Manager] et aux autres solutions d’[!DNL Experience Cloud]. Pour consulter les anciennes notes de mise à jour, reportez-vous à la section [Années précédentes](../docs-updates/docs-2018.md).
 
 ## Novembre 2019 {#aam-november-updates}
 
@@ -41,7 +41,7 @@ Consultez les [Notes de mise à jour d’Experience Cloud](https://experiencelea
 |--- |----|
 | [HTTP Strict-Transport-Security](../overview/data-security-and-privacy/data-security.md#hsts) | Nous avons ajouté la prise en charge de [!DNL HTTP Strict-Transport-Security], une politique de sécurité web qui protège contre le détournement de cookies et les attaques de rétrogradation de protocole. |
 | [Récence et fréquence](/help/using/features/segments/recency-and-frequency.md) | Nous avons mis à jour les exemples de capping de la fréquence dans l’article et ajouté des exemples pour le fonctionnement de la récence. |
-| <ul><li>[Créateur de segments](/help/using/features/segments/segment-builder.md)</li><li>[Rapports au niveau des segments dans Audience Marketplace](/help/using/features/audience-marketplace/marketplace-data-buyers/marketplace-buyer-billing.md)</li><li>[Création de rapports d’identité d’audience dans la vue Résumé des caractéristiques](/help/using/features/traits/trait-details-page.md)</li><li>[Rapports d’identité d’audience dans la vue Résumé du segment](/help/using/features/segments/segment-summary-view.md)</li><li>[Comment créer des caractéristiques de conversion &#x200B;](/help/using/features/traits/create-onboarded-rule-based-traits.md)</li><li>[Recommandations de caractéristiques](/help/using/features/segments/trait-recommendations.md)</li></ul> | Nous avons ajouté des tutoriels vidéo à plusieurs pages dans la documentation d’Audience Manager. |
+| <ul><li>[Créateur de segments](/help/using/features/segments/segment-builder.md)</li><li>[Rapports au niveau des segments dans Audience Marketplace](/help/using/features/audience-marketplace/marketplace-data-buyers/marketplace-buyer-billing.md)</li><li>[Création de rapports d’identité d’audience dans la vue Résumé des caractéristiques](/help/using/features/traits/trait-details-page.md)</li><li>[Rapports d’identité d’audience dans la vue Résumé du segment](/help/using/features/segments/segment-summary-view.md)</li><li>[Comment créer des caractéristiques de conversion ](/help/using/features/traits/create-onboarded-rule-based-traits.md)</li><li>[Recommandations de caractéristiques](/help/using/features/segments/trait-recommendations.md)</li></ul> | Nous avons ajouté des tutoriels vidéo à plusieurs pages dans la documentation d’Audience Manager. |
 
 ## Août 2019 {#aam-august-updates}
 
@@ -77,7 +77,7 @@ Aucune mise à jour majeure de la documentation ne doit être annoncée pour jui
 |--- |----|
 | [Obscurcissement des adresses IP](/help/using/features/administration/ip-obfuscation.md) | Votre entreprise peut souhaiter obscurcir l’adresse IP dans de nombreux pays en raison de la réglementation mondiale en matière de confidentialité. Audience Manager vous permet d’obsurcir les adresses IP des visiteurs de manière globale ou pays par pays. |
 | [Intégration Facebook WCA](/help/using/integration/integrating-third-party/facebook-wca-integration.md) | Cette page illustre le processus de création de pixels d’audiences personnalisées (WCA) de site web Facebook dans le but d’envoyer des segments d’audience Audience Manager web vers Facebook, pour un ciblage d’annonce en ligne avec une transparence améliorée. |
-| [Module d’Audience Manager pour le TCF de l’IAB](/help/using/overview/data-security-and-privacy/aam-iab-plugin.md) | Un aspect important des obligations de confidentialité que vous avez envers vos utilisateurs réside dans l’acquisition et le respect des choix des utilisateurs quant à la façon dont leurs données personnelles sont utilisées (c’est-à-dire les « objectifs ») et quant aux entités qui les utilisent (les « entreprises »). Adobe vous offre les moyens de gérer et de communiquer les choix de confidentialité de vos utilisateurs par le biais de la fonctionnalité [Opt-in](https://experienceleague.adobe.com/docs/id-service/using/implementation/opt-in-service/optin-overview.html?lang=fr) et de la prise en charge du [IAB Transparency and Consent Framework (TCF)](https://iabtechlab.com/standards/gdpr-transparency-and-consent-framework/). <br> <br>  Cet article décrit les cas d’utilisation d’Audience Manager qui prennent en charge le IAB TCF et comment implémenter la prise en charge du IAB TCF dans Audience Manager. |
+| [Module d’Audience Manager pour le TCF de l’IAB](/help/using/overview/data-security-and-privacy/aam-iab-plugin.md) | Un aspect important des obligations de confidentialité que vous avez envers vos utilisateurs est l&#39;acquisition et la transmission des choix des utilisateurs sur la façon dont leurs données personnelles peuvent être utilisées (c.-à-d., « fins ») et par qui (c.-à-d., « entreprises »). Adobe vous offre les moyens de gérer et de communiquer les choix de confidentialité de vos utilisateurs par le biais de la fonctionnalité [Opt-in](https://experienceleague.adobe.com/docs/id-service/using/implementation/opt-in-service/optin-overview.html) et de la prise en charge du [IAB Transparency and Consent Framework (TCF)](https://iabtechlab.com/standards/gdpr-transparency-and-consent-framework/). <br> <br>  Cet article décrit les cas d’utilisation d’Audience Manager qui prennent en charge le IAB TCF et comment implémenter la prise en charge du IAB TCF dans Audience Manager. |
 
 ## Mars 2019 {#aam-march-updates}
 
