--- a/help/using/docs-updates/docs-2020.md
+++ b/help/using/docs-updates/docs-2020.md
@@ -6,7 +6,7 @@ solution: Audience Manager
 title: Mises à jour de la documentation 2020
 feature: Overview
 exl-id: 38af1e31-f0dd-4956-b456-ef2002f77707
-source-git-commit: b0521682c6332d23e55d769e7421680337670fa4
+source-git-commit: fc26861e4a53abc57f8814abf823a51894fb6147
 workflow-type: tm+mt
 source-wordcount: '1085'
 ht-degree: 55%
@@ -17,7 +17,7 @@ ht-degree: 55%
 
 Une liste de la documentation nouvelle ou révisée publiée en 2020. Inclut des mises à jour mineures de la documentation d’Audience Manager qui pourraient ne pas figurer dans les notes de mise à jour d’Experience Cloud.
 
-Consultez les [Notes de mise à jour d’Experience Cloud](https://experienceleague.adobe.com/docs/release-notes/experience-cloud/current.html?lang=fr) pour prendre connaissance des modifications apportées à [!DNL Audience Manager] et aux autres solutions d’[!DNL Experience Cloud]. Pour consulter les anciennes notes de mise à jour, reportez-vous à la section [Années précédentes](../docs-updates/docs-2019.md).
+Consultez les [Notes de mise à jour d’Experience Cloud](https://experienceleague.adobe.com/docs/release-notes/experience-cloud/current.html) pour prendre connaissance des modifications apportées à [!DNL Audience Manager] et aux autres solutions d’[!DNL Experience Cloud]. Pour consulter les anciennes notes de mise à jour, reportez-vous à la section [Années précédentes](../docs-updates/docs-2019.md).
 
 
 ## Octobre 2020 {#aam-october-updates}
@@ -25,14 +25,14 @@ Consultez les [Notes de mise à jour d’Experience Cloud](https://experiencelea
 | Rubrique | Description |
 |----|----|
 | [Audiences prédictives](/help/using/features/algorithmic-models/predictive-audiences.md) | <ul><li>**Clonage de modèles d’audiences prédictives** : vous pouvez désormais cloner les modèles existants et modifier leur configuration en fonction de vos besoins. Lisez [Clonage et modification de modèles d’audience prédictifs](/help/using/features/algorithmic-models/predictive-audiences.md#clone-predictive-audiences) pour plus d’informations.</li><li>**Classification de lots d’audiences prédictives** : en plus de classer les visiteurs en rôles distincts en temps réel, les audiences prédictives prennent désormais en charge la classification par lots, ce qui vous permet de classer les utilisateurs intégrés et d’activer les destinations par lots.</li></ul> |
-| [Rapports de chevauchement &#x200B;](/help/using/reporting/dynamic-reports/dynamic-reports.md) | Nous avons mis à jour la méthodologie que nous utilisons pour calculer les rapports de chevauchement ([trait à trait](/help/using/reporting/dynamic-reports/trait-trait-overlap-report.md), [segment à trait](/help/using/reporting/dynamic-reports/segment-trait-overlap-report.md), [segment à segment](/help/using/reporting/dynamic-reports/segment-segment-overlap-report.md)). Le calcul des rapports de chevauchement est désormais basé sur les rapports uniques et les signatures MinHash (plutôt que sur l’échantillonnage de données [1/54](/help/using/reporting/report-sampling.md#data-sampling-ratio)). |
+| [Rapports de chevauchement ](/help/using/reporting/dynamic-reports/dynamic-reports.md) | Nous avons mis à jour la méthodologie que nous utilisons pour calculer les rapports de chevauchement ([trait à trait](/help/using/reporting/dynamic-reports/trait-trait-overlap-report.md), [segment à trait](/help/using/reporting/dynamic-reports/segment-trait-overlap-report.md), [segment à segment](/help/using/reporting/dynamic-reports/segment-segment-overlap-report.md)). Le calcul des rapports de chevauchement est désormais basé sur les rapports uniques et les signatures MinHash (plutôt que sur l’échantillonnage de données [1/54](/help/using/reporting/report-sampling.md#data-sampling-ratio)). |
 
 
 ## Septembre 2020 {#aam-september-updates}
 
 | Rubrique | Description |
 |---- |----|
-| [&#x200B; Accessibilité dans Audience Manager &#x200B;](/help/using/overview/accessibility-in-aam.md) | L’accessibilité fait référence à une série de fonctionnalités qui rendent un produit logiciel utilisable, avec le moins d’effort possible de la part des utilisateurs présentant divers handicaps, tels que visuels, auditifs, cognitifs, moteurs ou autres. Pour faciliter l’utilisation d’Audience Manager pour tous, nous avons développé la prise en charge de plusieurs fonctionnalités d’accessibilité, détaillées dans cet article. |
+| [ Accessibilité dans Audience Manager ](/help/using/overview/accessibility-in-aam.md) | L’accessibilité fait référence à une série de fonctionnalités qui rendent un produit logiciel utilisable, avec le moins d’effort possible de la part des utilisateurs présentant divers handicaps, tels que visuels, auditifs, cognitifs, moteurs ou autres. Pour faciliter l’utilisation d’Audience Manager pour tous, nous avons développé la prise en charge de plusieurs fonctionnalités d’accessibilité, détaillées dans cet article. |
 | [Noms de fichiers S3 entrants](/help/using/integration/sending-audience-data/batch-data-transfer-explained/inbound-s3-filenames.md) et [noms de fichiers FTP entrants](/help/using/integration/sending-audience-data/batch-data-transfer-explained/inbound-ftp-filenames.md) | Nous avons mis à jour les définitions et fourni des exemples pour les champs `DPID` et `DPID_TARGET_DATA_OWNER` dans la syntaxe du nom de fichier. |
 
 ## Août 2020 {#aam-august-updates}
@@ -55,7 +55,7 @@ Consultez les [Notes de mise à jour d’Experience Cloud](https://experiencelea
 | Rubrique | Description |
 |---- |----|
 | [Prise en charge du contrôle de l’exportation des données Audience Manager dans Adobe Experience Platform](/help/using/integration/integration-aep/aam-aep-audience-sharing.md#aam-data-export-control-in-aep) | La nouvelle section de l’article Partage d’audience entre Audience Manager et Adobe Experience Platform comprend un mappage entre les contrôles d’exportation des données Audience Manager et les libellés d’utilisation des données Experience Platform. |
-| [Module d’Audience Manager pour le TCF de l’IAB](../overview/data-security-and-privacy/aam-iab-plugin.md) | Dans la continuité de l’accent mis par Adobe sur la protection des données dès la conception, nous mettons à niveau le module externe Audience Manager pour IAB TCF vers la version 2.0 du Transparency &amp; Consent Framework (TCF) de l’IAB, à compter du 10 juin 2020. Les clients qui ont mis en œuvre le module externe Audience Manager pour IAB TCF doivent effectuer la mise à niveau vers la version 2.0 d’ici le 15 août 2020 afin de continuer à utiliser la fonctionnalité. Après le 15 août 2020, la version 1.1 sera obsolète et ne sera plus prise en charge. |
+| [Module d’Audience Manager pour le TCF de l’IAB](../overview/data-security-and-privacy/aam-iab-plugin.md) | Adobe Dans la continuité de notre travail sur la protection des données dès la conception, nous mettons à niveau le module externe Audience Manager pour IAB TCF vers la version 2.0 du Transparency &amp; Consent Framework (TCF) de l’IAB, à compter du 10 juin 2020. Les clients qui ont mis en œuvre le module externe Audience Manager pour IAB TCF doivent effectuer la mise à niveau vers la version 2.0 d’ici le 15 août 2020 afin de continuer à utiliser la fonctionnalité. Après le 15 août 2020, la version 1.1 sera obsolète et ne sera plus prise en charge. |
 
 ## Mai 2020 {#aam-may-updates}
 
